# e-commerce

./: README.md  docker-compose.yaml
cart-service/: README.md  pyproject.toml
cart-service/app/: lifespan.py
cart-service/app/api/: router.py
cart-service/app/api/v1/: cart.py
cart-service/app/core/: config.py  database.py  grpc_client.py
cart-service/app/crud/: cart.py
cart-service/app/models/: __init__.py  cart.py
cart-service/app/proto/: price.proto  price_service.py
cart-service/app/schemas/: cart.py
monitoring/: prometheus.yml
nginx/: Dockerfile  README.md  nginx.conf
notification-service/: Dockerfile  README.md  main.py  pyproject.toml
notification-service/core/: config.py  logger.py
notification-service/proto/: notification.proto  notification_pb2.py  notification_pb2.pyi  notification_pb2_grpc.py
notification-service/templates/: notification.html  password_reset.html  verify.html  welcome.html
product-service/: Dockerfile  README.md  pyproject.toml
product-service/app/: lifespan.py
product-service/app/api/: router.py
product-service/app/api/v1/: product.py
product-service/app/core/: config.py  database.py  dependency.py  logger.py  rabbitmq.py  redis.py
product-service/app/crud/: product.py
product-service/app/models/: product.py
product-service/app/proto/: price_pb2.py  price_pb2.pyi  price_pb2_grpc.py
product-service/app/rabbitmq/: dependency.py  lifespan.py  publisher.py
product-service/app/redis/: cache.py  dependency.py  lifespan.py
product-service/app/schemas/: product.py
search-service/: Dockerfile  README.md  pyproject.toml
search-service/app/: lifespan.py  main.py
search-service/app/api/: router.py
search-service/app/api/v1/: search.py
search-service/app/core/: config.py  database.py
search-service/app/elastic/: dependency.py  elastic.py  lifespan.py
search-service/app/rabbitmq/: lifespan.py  rabbit.py
search-service/app/schemas/: search.py
user-service/: README.md  pyproject.toml
user-service/app/: lifespan.py  main.py
user-service/app/api/: router.py
user-service/app/api/v1/: auth.py  user.py
user-service/app/auth/: auth.py  backend.py  dependency.py  error.py  manager.py  strategy.py  transport.py
user-service/app/core/: config.py  database.py  grpc_client.py
user-service/app/models/: user.py
user-service/app/proto/: notification_pb2_grpc.py
user-service/app/schemas/: user.py
