[project]
name = "notification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpc-interceptor>=0.15.4",
    "grpcio>=1.73.0",
    "grpcio-tools>=1.73.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
]
