[project]
name = "product-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aio-pika>=9.5.5",
    "beanie>=1.30.0",
    "fastapi>=0.115.13",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.0",
    "redis>=6.2.0",
    "yarl>=1.20.1",
]
