[project]
name = "search-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aio-pika>=9.5.5",
    "beanie>=1.30.0",
    "elasticsearch[async]>=9.0.2",
    "fastapi[standard]>=0.115.14",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "prometheus-client>=0.22.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.10.1",
    "yarl>=1.20.1",
]
